Fix life text alignment

--- a/client/sass/_menu.scss
+++ b/client/sass/_menu.scss
@@ -55,7 +55,7 @@
   border-radius: 50%;
   width: 70px;
   height: 70px;
-  line-height: 70px;
+  line-height: 75px;
   font-size: 3rem;
   text-align: center;
   vertical-align: middle;
